--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -29,6 +29,15 @@
             android:textColor="#FFFFFF"
             android:text="@string/contribute"
             android:layout_marginTop="50dp"/>
+        <Button
+            android:id="@+id/btn_sign_out"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:background="#194B70"
+            android:textColor="#FFFFFF"
+            android:text="@string/sign_out"
+            android:layout_marginTop="50dp"
+            />
     </LinearLayout>
 
 </RelativeLayout>
